# wbc-mjlab-extension-h2

./: .gitignore  Makefile  README.md  pyproject.toml
data/h2/: .gitkeep  README.md
data/h2/samples/: README.md  dance1_subject1.pkl  fallAndGetUp1_subject1.pkl  fight1_subject2.pkl  fightAndSports1_subject1.pkl  flip_090_001__A304.pkl  flip_090_001__A304_M.pkl  flip_090_002__A304_M.pkl  flip_090_003__A304.pkl  flip_360_009__A416.pkl  flip_360_011__A416_M.pkl  run1_subject2.pkl  sprint1_subject2.pkl  walk1_subject1.pkl
data/h2/samples/npz/: .gitkeep  flip_090_001__A304.npz  flip_090_001__A304_M.npz  flip_090_002__A304_M.npz  flip_090_003__A304.npz  flip_360_009__A416.npz  flip_360_011__A416_M.npz
src/wbc_mjlab_h2/: __init__.py  mjlab_entry.py
src/wbc_mjlab_h2/robots/h2/: actuators.py  base.py  constants.py  rl_cfg.py  tasks.py
src/wbc_mjlab_h2/robots/h2/xmls/: h2.xml
tests/: test_registration.py
