[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[project]
name = "wbc-mjlab-h2"
version = "0.1.0"
license = "Apache-2.0"
license-files = ["LICENSE"]
description = "Standalone wbc-mjlab example — Unitree H2 motion tracking"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10,<3.14"
dependencies = [
  "wbc-mjlab>=0.0.2",
  "mjlab>=1.5.0",
  "numpy<2.5",
]

[project.entry-points."mjlab.tasks"]
wbc_mjlab_h2 = "wbc_mjlab_h2.mjlab_entry"

[project.optional-dependencies]
cu128 = ["torch>=2.7.0"]
cpu = ["torch>=2.7.0"]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.14.14",
]

[tool.uv]
conflicts = [
  [{ extra = "cu128" }, { extra = "cpu" }],
]

[[tool.uv.index]]
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com/"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
# Prefer a local checkout when developing both repos side by side.
wbc-mjlab = { path = "../wbc-mjlab", editable = true }
warp-lang = { index = "nvidia", marker = "sys_platform != 'darwin'" }
torch = [
  { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform != 'darwin'" },
  { index = "pytorch-cpu", extra = "cpu", marker = "sys_platform != 'darwin'" },
]

[tool.ruff]
indent-width = 2
src = ["src"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B"]

[tool.pytest.ini_options]
addopts = "--strict-markers"
